// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlankPluginCard should render 1`] = `
<DocumentFragment>
  <div>
    <button
      class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
      data-testid="Card"
      tabindex="-1"
      type="button"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800"
        />
        <div
          class="flex flex-col truncate"
        >
          <span
            class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
          >
            Author
          </span>
          <div
            class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
          >
            Name
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BlankPluginCard should render with category 1`] = `
<DocumentFragment>
  <div>
    <button
      class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
      data-testid="Card"
      tabindex="-1"
      type="button"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800"
        />
        <div
          class="flex flex-col truncate"
        >
          <span
            class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
          >
            Author
          </span>
          <div
            class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
          >
            Name
          </div>
          <div
            class="flex items-center mt-4 space-x-2 text-theme-primary-100 dark:text-theme-secondary-800"
          >
            <div
              class="sc-bdfBwQ hjDozt"
              height="20"
              width="20"
            >
              <svg>
                category.svg
              </svg>
            </div>
            <span
              class="text-sm font-semibold"
            >
              Exchange
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BlankPluginCard should render with name 1`] = `
<DocumentFragment>
  <div>
    <button
      class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
      data-testid="Card"
      tabindex="-1"
      type="button"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800"
        />
        <div
          class="flex flex-col truncate"
        >
          <span
            class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
          >
            Author
          </span>
          <div
            class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
          >
            test-name
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
          >
            <div
              class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col truncate"
          >
            <span
              class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK.io
            </span>
            <div
              class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
            >
              <div
                class="truncate"
              >
                ARK Explorer
              </div>
              <span />
            </div>
            <div
              class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdfBwQ hjDozt"
                height="20"
                width="20"
              >
                <svg>
                  category.svg
                </svg>
              </div>
              <span
                class="text-sm font-semibold"
              >
                Utility
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="flex items-center space-x-2"
          />
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render alert icon 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
          >
            <div
              class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col truncate"
          >
            <span
              class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK.io
            </span>
            <div
              class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
            >
              <div
                class="truncate"
              >
                ARK Explorer
              </div>
              <span />
            </div>
            <div
              class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdfBwQ hjDozt"
                height="20"
                width="20"
              >
                <svg>
                  category.svg
                </svg>
              </div>
              <span
                class="text-sm font-semibold"
              >
                Utility
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="flex items-center space-x-2"
          >
            <span
              class="ml-3 text-xl"
              data-testid="PluginCard__minimum-version-warning"
            >
              <div
                class="sc-bdfBwQ dnaihB text-theme-warning-500"
                height="1em"
                width="1em"
              >
                <svg>
                  alert-warning.svg
                </svg>
              </div>
            </span>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render grant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
          >
            <div
              class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col truncate"
          >
            <span
              class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK.io
            </span>
            <div
              class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
            >
              <div
                class="truncate"
              >
                ARK Explorer
              </div>
              <span>
                <div
                  class="sc-bdfBwQ hjDozt"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </span>
            </div>
            <div
              class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdfBwQ hjDozt"
                height="20"
                width="20"
              >
                <svg>
                  category.svg
                </svg>
              </div>
              <span
                class="text-sm font-semibold"
              >
                Utility
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="flex items-center space-x-2"
          />
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render official icon 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
          >
            <div
              class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col truncate"
          >
            <span
              class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK.io
            </span>
            <div
              class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
            >
              <div
                class="truncate"
              >
                ARK Explorer
              </div>
              <span>
                <div
                  class="sc-bdfBwQ bcEVDZ"
                  height="16"
                  width="16"
                >
                  <svg>
                    official-ark-plugin.svg
                  </svg>
                </div>
              </span>
            </div>
            <div
              class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdfBwQ hjDozt"
                height="20"
                width="20"
              >
                <svg>
                  category.svg
                </svg>
              </div>
              <span
                class="text-sm font-semibold"
              >
                Utility
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="flex items-center space-x-2"
          />
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render update icon 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
          >
            <div
              class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col truncate"
          >
            <span
              class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK.io
            </span>
            <div
              class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
            >
              <div
                class="truncate"
              >
                ARK Explorer
              </div>
              <span />
            </div>
            <div
              class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdfBwQ hjDozt"
                height="20"
                width="20"
              >
                <svg>
                  category.svg
                </svg>
              </div>
              <span
                class="text-sm font-semibold"
              >
                Utility
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="flex items-center space-x-2"
          >
            <span
              class=""
              data-testid="PluginCard__update-available"
              role="button"
              tabindex="0"
            >
              <div
                class="sc-bdfBwQ hjDozt"
                height="20"
                width="20"
              >
                <svg>
                  update.svg
                </svg>
              </div>
            </span>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render without category 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
          >
            <div
              class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col truncate"
          >
            <span
              class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK.io
            </span>
            <div
              class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
            >
              <div
                class="truncate"
              >
                ARK Explorer
              </div>
              <span />
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="flex items-center space-x-2"
          />
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should trigger view 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div>
      <button
        class="Cardstyles__CardButton-sc-1uddqgb-0 jaxCkf"
        data-testid="Card"
        type="button"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
          >
            <div
              class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col truncate"
          >
            <span
              class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK.io
            </span>
            <div
              class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
            >
              <div
                class="truncate"
              >
                ARK Explorer
              </div>
              <span />
            </div>
            <div
              class="flex items-center mt-4 space-x-2 dark:text-theme-secondary-600"
            >
              <div
                class="sc-bdfBwQ hjDozt"
                height="20"
                width="20"
              >
                <svg>
                  category.svg
                </svg>
              </div>
              <span
                class="text-sm font-semibold"
              >
                Utility
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="flex items-center space-x-2"
          />
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
